@@ -1,6 +1,10 @@
 Please see NEWS for a summary of changes since the last release suitable
 for announcements.
 
+* Mon Aug 20 2012 Thunor <thunorsif@hotmail.com>
+- Added support for button horizontal image with label alignment: by
+  default the alignment is centred but it can be optionally uniform.
+
 * Sun Aug 19 2012 Thunor <thunorsif@hotmail.com>
 - Added window tags to a substantial number of old examples because they
   really should be there despite the parser accepting them without and
